// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot for boats 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#fff",
      "flex": 1,
      "flexDirection": "row",
      "marginLeft": 0,
      "paddingBottom": 5,
      "paddingTop": 5,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "height": 40,
        "justifyContent": "center",
        "paddingLeft": 7,
        "width": 50,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#eee",
          "borderRadius": 3,
          "borderWidth": 2,
          "flex": 1,
          "height": 40,
          "justifyContent": "center",
          "width": 40,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "fontFamily": "System",
              "fontSize": 16,
            },
            Object {
              "color": "#000",
              "fontSize": 10,
              "fontWeight": "bold",
              "textAlign": "center",
              "textAlignVertical": "center",
            },
          ]
        }
      >
        SVART
      </Text>
      <MaterialIcon
        color="#000"
        name="directions-boat"
        size={15}
      />
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "justifyContent": "center",
        "paddingLeft": 10,
      }
    }
  >
    <View
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "fontFamily": "System",
              "fontSize": 16,
            },
            Object {
              "fontWeight": "bold",
            },
          ]
        }
      >
        Högsbo
      </Text>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "fontFamily": "System",
              "fontSize": 16,
            },
            undefined,
          ]
        }
      >
        Läge 
        A
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "height": 50,
        "justifyContent": "center",
        "marginRight": 5,
        "width": 56,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontFamily": "System",
            "fontSize": 16,
          },
          Object {
            "color": "#FF6961",
            "fontSize": 18,
          },
        ]
      }
    >
      16:00
    </Text>
    <Text
      style={
        Array [
          Object {
            "fontFamily": "System",
            "fontSize": 16,
          },
          Object {
            "fontSize": 12,
          },
        ]
      }
    >
      16:05
    </Text>
  </View>
</View>
`;

exports[`should match snapshot for extra lines 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#efefef",
      "flex": 1,
      "flexDirection": "row",
      "marginLeft": 0,
      "paddingBottom": 5,
      "paddingTop": 5,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "height": 40,
        "justifyContent": "center",
        "paddingLeft": 7,
        "width": 50,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#eee",
          "borderRadius": 3,
          "borderWidth": 2,
          "flex": 1,
          "height": 40,
          "justifyContent": "center",
          "width": 40,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "fontFamily": "System",
              "fontSize": 16,
            },
            Object {
              "color": "#000",
              "fontSize": 14,
              "fontWeight": "bold",
              "textAlign": "center",
              "textAlignVertical": "center",
            },
          ]
        }
      >
        16X
      </Text>
      <MaterialIcon
        color="#000"
        name="directions-bus"
        size={15}
      />
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "justifyContent": "center",
        "paddingLeft": 10,
      }
    }
  >
    <View
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "fontFamily": "System",
              "fontSize": 16,
            },
            Object {
              "fontWeight": "bold",
            },
          ]
        }
      >
        Högsbo
      </Text>
      <MaterialIcon
        name="public"
        size={13}
        style={
          Object {
            "alignSelf": "center",
            "color": "#779ECB",
            "marginLeft": 2,
            "marginTop": 2,
          }
        }
      />
    </View>
    <Text
      style={
        Array [
          Object {
            "fontFamily": "System",
            "fontSize": 16,
          },
          Object {
            "fontSize": 12,
            "marginTop": -5,
          },
        ]
      }
    >
      via Centralstationen
    </Text>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "fontFamily": "System",
              "fontSize": 16,
            },
            undefined,
          ]
        }
      >
        Läge 
        A
      </Text>
      <MaterialIcon
        name="accessible"
        size={13}
        style={
          Object {
            "alignSelf": "center",
            "marginLeft": 5,
          }
        }
      />
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "height": 50,
        "justifyContent": "center",
        "marginRight": 5,
        "width": 56,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontFamily": "System",
            "fontSize": 16,
          },
          Object {
            "color": "#000",
            "fontSize": 18,
          },
        ]
      }
    >
      16:00
    </Text>
    <Text
      style={
        Array [
          Object {
            "fontFamily": "System",
            "fontSize": 16,
          },
          Object {
            "fontSize": 12,
          },
        ]
      }
    >
      16:05
    </Text>
  </View>
</View>
`;

exports[`should match snapshot for trains 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#efefef",
      "flex": 1,
      "flexDirection": "row",
      "marginLeft": 0,
      "paddingBottom": 5,
      "paddingTop": 5,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "height": 40,
        "justifyContent": "center",
        "paddingLeft": 7,
        "width": 50,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#eee",
          "borderRadius": 3,
          "borderWidth": 2,
          "flex": 1,
          "height": 40,
          "justifyContent": "center",
          "width": 40,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "fontFamily": "System",
              "fontSize": 16,
            },
            Object {
              "color": "#000",
              "fontSize": 14,
              "fontWeight": "bold",
              "textAlign": "center",
              "textAlignVertical": "center",
            },
          ]
        }
      >
        1
      </Text>
      <MaterialIcon
        color="#000"
        name="train"
        size={15}
      />
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "justifyContent": "center",
        "paddingLeft": 10,
      }
    }
  >
    <View
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "fontFamily": "System",
              "fontSize": 16,
            },
            Object {
              "fontWeight": "bold",
            },
          ]
        }
      >
        Centralstationen
      </Text>
      <MaterialIcon
        name="public"
        size={13}
        style={
          Object {
            "alignSelf": "center",
            "color": "#779ECB",
            "marginLeft": 2,
            "marginTop": 2,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "fontFamily": "System",
              "fontSize": 16,
            },
            undefined,
          ]
        }
      >
        Läge 
        A
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "height": 50,
        "justifyContent": "center",
        "marginRight": 5,
        "width": 56,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontFamily": "System",
            "fontSize": 16,
          },
          Object {
            "color": "#FFB347",
            "fontSize": 14,
          },
        ]
      }
    >
      1h 0m
    </Text>
    <Text
      style={
        Array [
          Object {
            "fontFamily": "System",
            "fontSize": 16,
          },
          Object {
            "fontSize": 12,
          },
        ]
      }
    >
      8
    </Text>
  </View>
</View>
`;
